This update includes many small revisions to fix "bugs" identified by FindBugs.
The following files were modified:

M    src/edu/rice/cs/drjava/DrJava.java
M    src/edu/rice/cs/drjava/DrJavaRoot.java
M    src/edu/rice/cs/drjava/model/debug/DebugWatchDataTest.java
M    src/edu/rice/cs/drjava/model/debug/jpda/JPDADebugger.java
M    src/edu/rice/cs/drjava/model/debug/jpda/JPDABreakpoint.java
M    src/edu/rice/cs/drjava/model/cache/DocumentCache.java
M    src/edu/rice/cs/drjava/model/definitions/indent/QuestionStartAfterOpenBrace.java
M    src/edu/rice/cs/drjava/model/definitions/indent/Indenter.java
M    src/edu/rice/cs/drjava/model/definitions/CommentTest.java
M    src/edu/rice/cs/drjava/model/definitions/CompoundUndoManager.java
M    src/edu/rice/cs/drjava/model/definitions/DefinitionsDocument.java
M    src/edu/rice/cs/drjava/model/definitions/DefinitionsDocumentTest.java
M    src/edu/rice/cs/drjava/model/definitions/reducedmodel/AbstractReducedModel.java
M    src/edu/rice/cs/drjava/model/definitions/reducedmodel/ModelListTest.java
M    src/edu/rice/cs/drjava/model/definitions/reducedmodel/ReducedModelBrace.java
M    src/edu/rice/cs/drjava/model/definitions/IndentTest.java
M    src/edu/rice/cs/drjava/model/MovingDocumentRegion.java
M    src/edu/rice/cs/drjava/model/GlobalEventNotifier.java
M    src/edu/rice/cs/drjava/model/repl/History.java
M    src/edu/rice/cs/drjava/model/repl/HistoryTest.java
M    src/edu/rice/cs/drjava/model/repl/InteractionsScriptModel.java
M    src/edu/rice/cs/drjava/model/repl/InteractionsDJDocument.java
M    src/edu/rice/cs/drjava/model/repl/InteractionsModel.java
M    src/edu/rice/cs/drjava/model/repl/RMIInteractionsModel.java
M    src/edu/rice/cs/drjava/model/AbstractDJDocument.java
M    src/edu/rice/cs/drjava/model/DocumentRegion.java
M    src/edu/rice/cs/drjava/model/compiler/DefaultCompilerModel.java
M    src/edu/rice/cs/drjava/model/compiler/CompilerError.java
M    src/edu/rice/cs/drjava/model/AbstractGlobalModel.java
M    src/edu/rice/