@@ -57,8 +57,8 @@ public final class IntegerOptionTest extends DrJavaTestCase {
   public void testParse() {
     IntegerOption io = new IntegerOption("max_files",null);
     
-    assertEquals(new Integer(3), io.parse("3"));
-    assertEquals(new Integer(-3), io.parse("-3"));
+    assertEquals(Integer.valueOf(3), io.parse("3"));
+    assertEquals(Integer.valueOf(-3), io.parse("-3"));
     
     try { io.parse("true"); fail(); }
     catch (OptionParseException e) { }
@@ -71,9 +71,9 @@ public final class IntegerOptionTest extends DrJavaTestCase {
     IntegerOption io1 = new IntegerOption("max_files",null);
     IntegerOption io2 = new IntegerOption("indent_size",null);
     
-    assertEquals("33",  io1.format(new Integer(33)));
-    assertEquals("33",  io2.format(new Integer(33)));
-    assertEquals("-11", io1.format(new Integer(-11)));
-    assertEquals("-11", io2.format(new Integer(-11)));
+    assertEquals("33",  io1.format(Integer.valueOf(33)));
+    assertEquals("33",  io2.format(Integer.valueOf(33)));
+    assertEquals("-11", io1.format(Integer.valueOf(-11)));
+    assertEquals("-11", io2.format(Integer.valueOf(-11)));
   }
 }
