@@ -57,7 +57,7 @@ public class NonNegativeIntegerOption extends IntegerOption {
       value = Integer.parseInt(s);
       if (value < 0)
         throw new OptionParseException(name, s, "Must be a non-negative integer value.");
-      return new Integer(value); 
+      return Integer.valueOf(value); 
     }
     catch (NumberFormatException e) {
       throw new OptionParseException(name, s, "Must be a non-negative integer value.");
