@@ -50,7 +50,7 @@ import javax.swing.text.BadLocationException;
  */
 public final class CommentTest extends DrJavaTestCase {
   protected DefinitionsDocument doc;
-  private Integer _indentLevel = new Integer(2);
+  private Integer _indentLevel = Integer.valueOf(2);
 //  private Integer configIndent;
   private GlobalEventNotifier _notifier;
 
