@@ -106,7 +106,7 @@ public class DocFile extends File {
    *  @param end the end of the selection (and the cursor position)
    */
   public void setSelection(int start, int end) {
-    _sel = new Pair<Integer,Integer>(new Integer(start), new Integer(end));
+    _sel = new Pair<Integer,Integer>(Integer.valueOf(start), Integer.valueOf(end));
   }  
   /** @return the selection with the first element being the vertical scroll and the second being the horizontal scroll. */
   public Pair<Integer,Integer> getScroll() { return _scroll; }
@@ -118,7 +118,7 @@ public class DocFile extends File {
    *  @param horiz the horizonal scroll of the scroll pane
    */
   public void setScroll(int vert, int horiz) {
-    _scroll = new Pair<Integer,Integer>(new Integer(vert), new Integer(horiz));
+    _scroll = new Pair<Integer,Integer>(Integer.valueOf(vert), Integer.valueOf(horiz));
   }
   
   /** @return  {@code true} if this file is supposed to be the active document when opened. */
