@@ -55,9 +55,9 @@ public class BidirectionalHashMapTest extends DrJavaTestCase {
     
     Double[] dbls = new Double[]{dbl1, dbl2, dbl3};
 
-    Integer int1 = new Integer(1);
-    Integer int2 = new Integer(2);
-    Integer int3 = new Integer(3);
+    Integer int1 = Integer.valueOf(1);
+    Integer int2 = Integer.valueOf(2);
+    Integer int3 = Integer.valueOf(3);
     
     Integer[] ints = new Integer[]{int1, int2, int3};
      
@@ -140,9 +140,9 @@ public class BidirectionalHashMapTest extends DrJavaTestCase {
     Double dbl2 = new Double(.2);
     Double dbl3 = new Double(.3);
 
-    Integer int1 = new Integer(1);
-    Integer int2 = new Integer(2);
-    Integer int3 = new Integer(3);
+    Integer int1 = Integer.valueOf(1);
+    Integer int2 = Integer.valueOf(2);
+    Integer int3 = Integer.valueOf(3);
     BidirectionalHashMap<Double, Integer> dToi = new BidirectionalHashMap<Double, Integer>();
 
     assertEquals("Initial size of 0", dToi.size(), 0);
@@ -202,9 +202,9 @@ public class BidirectionalHashMapTest extends DrJavaTestCase {
     String two = "2";
     String three = "3";
     
-    Integer int1 = new Integer(1);
-    Integer int2 = new Integer(2);
-    Integer int3 = new Integer(3);
+    Integer int1 = Integer.valueOf(1);
+    Integer int2 = Integer.valueOf(2);
+    Integer int3 = Integer.valueOf(3);
     
     BidirectionalHashMap<String, Integer> myhash = new BidirectionalHashMap<String, Integer>();
 
